saving xlsx with multiple sheets
add :renamesheet COMMAND_MODE command
created movetosheet command in gram.y, to be used internally or in scripts when saving
and loading files.
reeval in multiple sheets: graph now should keep track of the different sheets
             reference cells from different sheets in formulas: ={"Sheet2"}!A2
Save triggers in files
** Added automated tests

Changes:
--------
Renamed auto_justify to auto_fit
ui optimizations
`gt` command of NORMAL_MODE renamed to `go`
removed --sheet and --filename_with_mode configuration variables
UNDO now saves reference to the sheet where the action took place.
+ copy_to_undostruct() now keep in added/removed list struct ent_ptr *
  (that knows of sheets), rather than struct ent *.

Fixes
-----
** fix in calc_mobile_cols()
** fix not updating graph correctly after yanking cells with references -> Pc -> undo.
   It could also segfault on ocassions as well. Added test5 and test6 for this.

Issue #568: handle '>' and '<' on mappings.
Issue #569: fix invalid read/write/segfault when deleting column.
            Added test8 and test9 for this.

fix: scroll correctly when editing cells with long strings (wider than screen)
Avoid reading passed maxcols maxrows when shifting left or up over last sheet column/row.
fix in Pv when pasting over same place where data was yanked.
fix in paste_yanked_ents: calloc didnt count that yanked cells could share dependencies.


Pending to make v0.8.3 release
-------------------
yanklist should be struct ent_ptr list, rather thant struct ent list.
todo: undo.c: add ent_ptr to added / deleted lists ordered.
todo: ents_that_depends_on_list SHOULD take ent_ptr rather than struct ent * as parameter!

+ mark should consider sheet. We could have mark A in Sheet 1, and mark B on Sheet 2.. modify tick()
input: block buffer maps digraph
+ rearrange file loading and saving functions
+ Show range detail in inputwin as A0:C3
+ Add GETENT in seval